Style bug fix
Fixed:  “The white "+" is not aligned”

--- a/scss/book/book.styles.scss
+++ b/scss/book/book.styles.scss
@@ -469,7 +469,7 @@ $slider-radius: 26px;
     border-style: solid !important;
     border-radius: 50% !important;
     background: $theme-color-2 !important;
-    content: ' ' !important;
+    content: none !important;
     @include transition(background-color 20ms ease-in-out);
   }
 }
@@ -482,15 +482,17 @@ input:checked + .radio-icon:before {
 // the checkmark within the box
 .item-radio input:after,
 .radio-icon:after {
+  font-family: "Ionicons";
   position: absolute !important;
-  font-size: 26px !important;
-  top: -4px !important;
-  left: 5px !important;
+  font-size: 34px !important;
+  top: -10px !important;
+  left: 0 !important;
   display: table !important;
-  content: '+' !important;
-  color: white;
+  content: '\f48b' !important;
+  color: $theme-color-2;
 }
 .unchecked-radio {
+  font-family: "Ionicons";
   position: absolute !important;
   top: 25% !important;
   right: 17px !important;
@@ -504,6 +506,7 @@ input:checked + .radio-icon:before {
   -webkit-appearance: none !important;
   float: right !important;
   border-radius: 50% !important;
+  content: "\f401";
 }
 
 /*
